--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,4 +1,5 @@
 python_module: mitek_mobile_verify
 python_source_directory: mitek_mobile_verify
-publish_over_ssh: pypi.sunet.se
+publish_over_ssh:
+  - pypi.sunet.se
 clean_workspace: true
